# gp-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  Makefile  README.md  aichat_extract.sh  canonical-person-plan.md  claudeExampleGeoIdConverter.sql  geoIdConverterPseudo.py  requirements_test.txt  ruff.toml
airflow/: .env.example  README.md  pyproject.toml
airflow/astro/: Dockerfile  README.md  airflow_settings.yaml.example  requirements.txt
airflow/astro/.astro/: config.yaml  test_dag_integrity_default.py
airflow/astro/dags/: ballotready_graphql_extract.py  ballotready_graphql_person_extract.py  example_etl_galaxies.py  hello_world.py  l2_expired_voters.py  load_districtstats.py  load_people_api.py  load_people_api_old.py  load_people_api_v2.py  sync_election_api.py
airflow/astro/docs/: people_api_loader.md
airflow/astro/include/: astronomy.db  loader_dbt_profiles.yml
airflow/astro/tests/: test_ballotready_graphql.py  test_databricks_utils.py  test_election_api_swap.py  test_election_api_utils.py  test_l2_sftp.py  test_postgres_utils.py  test_race_quality_gate.py  test_sync_election_api.py
analytics/: pyproject.toml  pytest.ini
analytics/data/: amplitude_event_provenance.csv  amplitude_event_provenance_state.json
analytics/diagnostics/: baseline_question.md  pipeline_profiler.py
analytics/diagnostics/quality_bench/: README.md  bank.py  canaries.yaml  floor.md  floor_gen.py  floor_static.md  grade.py  grading.py  integrity.py  judge.py  prep_arms.py  run_matrix.py  spot_check.py
analytics/eo_hubspot_export/: README.md  audit_sample.py  ballotready_staleness_check.py  fuzzy_er.py  run_export.py
analytics/lib/: README.md  amplitude_event_provenance_backfill.py  databricks_conn.py  serve_analysis.py  win_analysis.py
analytics/projects/win_power_users/: 2026-07-22_win-power-user-profile_brief.yaml  FINDINGS.html  FINDINGS.md  win_power_users.py
analytics/projects/win_topline_reporting/: followup_reply_2026-07-23.md  topline_report.py  win_topline_reporting_brief.yaml
analytics/runbook/: CANDIDATES.md  README.md  refresh-event-provenance.md  run-product-analysis.md  win.md
analytics/scripts/: pull.sh  sync.sh
analytics/tests/: test_amplitude_event_provenance_backfill.py  test_databricks_conn.py  test_pipeline_profiler.py  test_quality_bench_bank.py  test_quality_bench_floor.py  test_quality_bench_grade.py  test_quality_bench_grading.py  test_quality_bench_integrity.py  test_quality_bench_judge.py  test_quality_bench_prep.py  test_quality_bench_run_matrix.py  test_quality_bench_spot_check.py  test_serve_analysis.py  test_skill_doc_links.py  test_win_analysis.py
analytics/win_churn/: CLAUDE.md  SESSION_NOTES.md
analytics/win_outcomes_scout/: INVENTORY.md  requirements.txt
analytics/win_outcomes_scout/notebooks/: inventory_queries.ipynb
apps/genie-slack-bot/: README.md  app.py  app.yaml  config.py  databricks_genie_client.py  pyproject.toml  requirements.txt  slack_bot.py
apps/genie-slack-bot/tests/: test_slack_bot.py
apps/genie-tools/: README.md  pyproject.toml
apps/genie-tools/tests/: test_genie_tools.py
dbt/: .env.local  dbt_project.yml  pyproject.toml
dbt/models/staging/: __sources.yaml
dbt/project/: .dbtignore  CLAUDE.md  ai-data-flows.md  dbt_project.yml  package-lock.yml  packages.yaml  packages.yml
dbt/project/analyses/: ddhq_election_stage_coverage_gaps.sql  elected_officials_hubspot_export.sql  (+1 more)
dbt/scripts/: acs5y2024_manifest.json  load_acs_summary_file.py
dbt/tests/: test_load__l2_s3_to_databricks.py  test_load_acs_summary_file.py  test_voter_turnout_lgbm_inference.py  test_write__election_api_db.py
dbt/utils/: fuzzy_matching_utils.py
entity_resolution/: .dockerignore  Dockerfile  README.md  pyproject.toml
entity_resolution/results/: m_u_parameters_chart.html  match_weights_chart.html
entity_resolution/scripts/: 02_investigate_filter.py  03_experiment_fixes.py  04_refined_experiment.py  05_false_negative_analysis.py  __init__.py  analyze_misses.py  audit_false_negatives.py  audit_low_confidence.py  audit_summary.py  check_missing_br.py  check_recall.py  cli.py  databricks_io.py  debug_blocking.py  debug_humanname.py  debug_missing_pairs.py  initial_match.py  pipeline.py
entity_resolution/tests/: __init__.py  conftest.py  dummy_data.csv  test_databricks_io.py  test_integration.py  test_pipeline.py
matcha/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
matcha/scripts/: audit_false_negatives.py  audit_low_confidence.py  audit_summary.py  cli.py  constants.py  databricks_io.py  entity_config.py  pipeline.py
matcha/tests/: conftest.py  dummy_data.csv  dummy_data_elected.csv  test_audit.py  test_candidacy_config.py  test_cli.py  test_constants.py  test_databricks_io.py  test_elected_official_config.py  test_election_stage_config.py  test_election_stage_constants.py  test_entity_config.py  test_integration.py  test_pipeline.py
people-api-loader/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
people-api-loader/docs/: DATA-2100-district-family-design.md  DATA-2100-district-family-plan.md  PLAN_LOADER.md  validate.md
people-api-loader/tests/: _fakes.py  conftest.py  test_aws.py  test_bastion.py  test_build_indexes.py  test_cli_smoke.py  test_cluster_lifecycle_moto.py  test_config.py  test_connections.py  test_copy_manifest.py  test_copy_s3.py  test_create_schema.py  test_databricks.py  test_db.py  test_emit_ddl.py  test_format_contract.py  test_index_specs.py  test_inspect_prod.py  test_integration_pg.py  test_mart_introspect.py  test_provision.py  test_provision_moto.py  test_read_manifest.py  test_resize.py  test_resolve_writer_endpoint.py  test_scale_down.py  test_schema_spec.py  test_serving_seed_writer.py  test_serving_structure.py  test_snapshot.py  test_states.py  test_status_command.py  test_table_ddl.py  test_teardown.py  test_type_map.py  test_unload.py  test_unload_manifest.py  test_unload_sql.py  test_validate.py
scripts/win_number/: enrich_with_geoids.py  pyproject.toml
(+1558 files in other folders)
