[project]
name = "astro-goodparty"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugh Karimi",email = "hkarimi@goodparty.org"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow (==3.0.6)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pyspark (>=4.0.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
