[project]
name = "astro-goodparty"
version = "0.1.0"
description = "Airflow DAGs for GoodParty.org (deployed via Astro Runtime)"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow==3.2.0",
    "duckdb>=1.3.2,<2.0.0",
    "pendulum>=3.1.0,<4.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "pandas>=2.3.1,<3.0.0",
    "pyspark>=4.0.0,<5.0.0",
    "paramiko>=3.0.0,<5.0.0",
    "databricks-sql-connector>=4.2.6,<5.0.0",
    "databricks-sdk>=0.30.0,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sshtunnel>=0.4.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "mypy>=1.15",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["astro"]
testpaths = ["astro/tests"]
