[project]
name = "analytics"
version = "0.1.0"
description = "GoodParty analytics (win analysis, churn)"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.15",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["lib"]
testpaths = ["tests"]
