[project]
name = "analytics"
version = "0.1.0"
description = "GoodParty analytics (win analysis, churn)"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3,<4.0.0",
    "pyyaml>=6.0",
    "databricks-sql-connector>=3",
    "databricks-sdk>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "mypy>=2.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["lib", "diagnostics"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF002", "RUF001"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
