[project]
name = "dbt-goodparty"
version = "0.1.0"
description = "Data warehouse for GoodParty.org"
authors = [
    {name = "Hugh Karimi",email = "hkarimi@goodparty.org"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "boto3 (>=1.38.10,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "apache-airflow (==3.0.4)",
    "thefuzz (<1.0.0)",
    "google-genai (>=1.40.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
