[project]
name = "dbt-goodparty"
version = "0.1.0"
description = "Data warehouse for GoodParty.org"
authors = [
    {name = "Hugh Karimi",email = "hkarimi@goodparty.org"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "boto3 (>=1.43.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "apache-airflow (==3.2.0)",
    "thefuzz (<1.0.0)",
    "google-genai (>=1.74.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "databricks-sql-connector (>=4.2.6,<5.0.0)",
    "databricks-sdk (>=0.94.0,<0.95.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
