[project]
name = "entity-resolution"
version = "0.1.0"
description = "Splink entity resolution: multi-source candidacy matching"
requires-python = ">=3.11"
dependencies = [
    "click",
    "splink>=4.0.15",
    "pandas",
    "duckdb",
    "nameparser",
    "vl-convert-python>=1.9.0.post1",
    "databricks-sql-connector>=3.0.0,<5.0.0",
    "databricks-sdk>=0.30.0,<1.0.0",
    "pyarrow",
    "rapidfuzz>=3.14.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Databricks connectivity",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "pytest",
]
