[project]
name = "entity-resolution"
version = "0.1.0"
description = "Splink entity resolution: multi-source candidacy matching"
requires-python = ">=3.11"
dependencies = [
    "click",
    "splink>=4.0.15",
    "pandas",
    "duckdb",
    "nameparser",
    "vl-convert-python>=1.9.0.post1",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Databricks connectivity",
]
