[project]
name = "people-api-loader"
version = "0.1.0"
description = "GoodParty.org data loader: generic Databricks -> S3 -> RDS pipeline harness, plus the people-API consumer as its first concrete pipeline."
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.47",
    "psycopg[binary,pool]>=3.2",
    "databricks-sdk>=0.120.0",
    "pydantic>=2.8",
    "typer>=0.26.8",
    "structlog>=26.1.0",
    "rich>=13.9",
    "tenacity>=9.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.14",
    "ruff>=0.15.21",
    "ty==0.0.59",
    "pre-commit>=4.0",
    "moto[rds,ec2]>=5.0",
]

[project.scripts]
loader = "loader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loader"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: line length handled by formatter
# RUF002: en-dash in docstrings is intentional
ignore = ["E501", "RUF002"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
