[project]
name = "genie-slack-bot"
version = "0.1.0"
description = "Slack bot for Databricks Genie (civics)"
requires-python = ">=3.14"
dependencies = [
    "slack-bolt>=1.29.0,<2.0.0",
    "slack-sdk>=3.43.0,<4.0.0",
    "databricks-sdk>=0.120.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "mypy>=2.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF002"]
