[project]
name = "genie-tools"
version = "0.1.0"
description = "Export-only Databricks Genie config utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.30.0,<1.0.0",
]

[project.scripts]
genie-tools = "genie_tools.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
